# sol_live_ticker_update

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
scripts/: run_live_terminal.py  serve_live_dashboard.py  start_render.sh  stream_coinbase_ticks.py
src/sol_live_update/: __init__.py  live_coinbase.py
web/: live_crypto_dashboard.html  live_sol_dashboard.html
web/assets/: live_dashboard.css  live_dashboard.js
