[project]
name = "sol-live-update"
version = "0.1.0"
description = "Standalone Coinbase multi-market live terminal"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
